# rover_system

./: .gitignore  requirements  todo
Rover_Client/Java/RoverClient/: .project
Rover_Client/Java/RoverClient/src/com/rover/controller/: Client.java
Rover_Client/Java/RoverClient/src/com/rover/gui/: ConnectionPanel.java  IInit.java  MainWindow.java  MotorControlPanel.java  SendPanel.java  ServoControlPanel.java
Rover_Client/Qt/Client02/: Client02.pro  protocol.cpp  protocol.h  widget.cpp
Rover_Client/Qt/RoverClientQt/: CMakeLists.txt  RoverClientQt.pro  persistconfig.cpp  persistconfig.h  widget.cpp  widget.h  widget.ui
Rover_Client/qt_client/RoverClient/: RoverClient.pro  main.cpp  protocol.cpp  protocol.h  roverclientwindow.cpp  roverclientwindow.h  roverclientwindow.ui
docs/: application.drawio  notas  rover_system  todo
rover_system/: CMakeLists.txt  README
rover_system/app/: CMakeLists.txt
rover_system/app/include/: app.h  manager.h  protocol.h  rover_status.h  rover_types.h
rover_system/app/lib/: memory_init.c  protocol.c  utils.c
rover_system/app/src/: CMakeLists.txt  rover_admin.c  rover_client.c  rover_launch.c  rover_lcd16_control.c  rover_manager.c  rover_motor_control.c  rover_mqtt.c  rover_server.c  rover_servo_control.c  rover_ultrasound_control.c  rover_unlaunch.c  rover_webserver.c
rover_system/app/src/process/: CMakeLists.txt  rover_launch.c  rover_unlaunch.c
rover_system/app/src/tasks/include/: context.h  includes.h  interface.h  rover_lcd16_control.h  rover_manager.h  rover_motor_control.h  rover_mqtt.h  rover_server.h  rover_servo_control.h  rover_ultrasound_control.h  rover_webserver.h
rover_system/app/src/tasks/libs/: auxiliar.c  auxiliar.h  control_interface.c  control_interface.h
rover_system/app/src/tasks/src/: rover_lcd16_control.c  rover_manager.c  rover_monitor.c  rover_motor_control.c  rover_mqtt.c  rover_server.c  rover_servo_control.c  rover_ultrasound_control.c  rover_webserver.c
rover_system/app/src/thread/: CMakeLists.txt  rover_thread.c  rover_thread_kill.c  thread.c
rover_system/blueprints/: motors  rover_launch_specs.txt
rover_system/config/: postinst  rover.service  rover_syslog.conf
rover_system/config/thread/: rover.service
rover_system/docs/: application.drawio
rover_system/driver/: CMakeLists.txt
rover_system/driver/arch/pc/src/: hc_sr04.c  motors.c  servo.c
rover_system/driver/arch/raspberry/src/: lcd16.c
rover_system/driver/include/: hc_sr04.h  lcd16.h  lcd16_action.h  motors_action.h  servo.h  servo_action.h  ultrasound_action.h
rover_system/driver/src/: lcd16_action.c  motors_action.c  servo_action.c  ultrasound_action.c
rover_system/libs/: CMakeLists.txt
rover_system/libs/include/client/tcp/: clienttcp.h
rover_system/libs/include/collection/: list_static.h
rover_system/libs/include/file/: file.h
rover_system/libs/include/log/: log.h
rover_system/libs/include/queue/: queue.h
rover_system/libs/include/semaphore/: semaphore.h
rover_system/libs/include/server/: tcp.h
rover_system/libs/include/sharedmemory/: sharedmemory.h
rover_system/libs/include/signal/: signal.h
rover_system/libs/include/util/: util.h
rover_system/libs/src/collection/: list_static.c
rover_system/libs/src/file/: file.c
rover_system/libs/src/log/: log.c
rover_system/libs/src/queue/: queue.c
rover_system/libs/src/semaphore/: semaphore.c
rover_system/libs/src/server/: tcp.c
rover_system/libs/src/sharedmemory/: sharedmemory.c
rover_system/libs/src/signal/: signal.c
rover_system/libs/src/util/: time_meas.c
rover_system/libs/test_lib/: test_send_signal.c  test_servertcp.c  test_signal.c  test_time_meas.c
rover_system/scripts/: install.sh.in  uninstall.sh.in
rover_system/specification/: specs
rover_system/tests/: test_motors.c  test_servo.c  test_ultrasonic.c
